# news-email-sender

./: .env  README.md  main.py  pyproject.toml
news_email_sender/: email_temp.html  news_api.py
